# tair

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  ax_boost.m4  bootstrap.sh  configure.ac  tcmalloc.m4
src/client/: ConfigLoader.hpp  Makefile.am  NBQueue.hpp  Worker.hpp  clean_worker.hpp  cluster_controller.cpp  cluster_controller.hpp  cluster_handler_manager.cpp  cluster_handler_manager.hpp  cluster_info_updater.cpp  cluster_info_updater.hpp  config_loader.hpp  data_entry_local_cache.cpp  data_entry_local_cache.h  del_job.hpp  diamond_manager.cpp  diamond_manager.hpp  file.keys  flow_admin.cpp  flow_admin.h  i_tair_client_impl.cpp  i_tair_client_impl.hpp  local_cache.h  local_cache.hpp  manipulate_ds_to_cs.cpp  nonblock_queue.hpp  string_local_cache.cpp  string_local_cache.h  tair_client.cpp  tair_client.hpp  tair_client_api.cpp  tair_client_api.hpp  tair_client_api_impl.cpp  tair_client_api_impl.hpp  tair_client_capi.cpp  tair_client_capi.hpp  tair_key_clean.cpp  tair_mc_client_api.cpp  tair_mc_client_api.hpp  tair_multi_cluster_client_impl.cpp  (+6 more)
src/common/: BlockQueueEx.hpp  Makefile.am  async_callback_def.hpp  atomic.h  blockqueue.hpp  bucket_queue.cpp  bucket_queue.hpp  cJSON.c  cJSON.h  compressor.hpp  concurrent_queue.hpp  counter_wrapper.hpp  data_dumpper.cpp  data_dumpper.hpp  data_entry.cpp  data_entry.hpp  databuffer.hpp  define.hpp  dump_data_info.hpp  easy_helper.cpp  easy_helper.hpp  file_list_factory.hpp  file_op.cpp  file_op.hpp  flow_controller.h  flowrate.h  hash.hpp  httpclient.cpp  httpclient.hpp  inval_stat.hpp  item_data_info.cpp  item_data_info.hpp  key_value_pack.hpp  log.hpp  log_reader.hpp  mixin_test_helper.cpp  mixin_test_helper.hpp  mmap_file.hpp  mutex_lock.h  record.cpp  (+25 more)
src/configserver/: Makefile.am  conf_server_table_checker.cpp  conf_server_table_manager.cpp  conf_server_table_manager.hpp  conf_server_table_monitor.cpp  conf_server_table_transfer.cpp  const_parameter_pinter.cpp  group_info.cpp  group_info.hpp  migrate_emulator.cpp  server_conf_thread.cpp  server_conf_thread.hpp  server_info.cpp  server_info.hpp  server_info_allocator.cpp  server_info_allocator.hpp  server_info_file_mapper.cpp  server_info_file_mapper.hpp  server_info_file_monitor.cpp  stat_info.cpp  stat_info.hpp  stat_info_test.cpp  table_builder.cpp  table_builder.hpp  table_builder1.cpp  table_builder1.hpp  table_builder2.cpp  table_builder2.hpp  tair_cfg_svr.cpp  tair_cfg_svr.hpp
src/dataserver/: Makefile.am  base_migrate.hpp  base_tair_manager.hpp  cluster_handler.cpp  cluster_handler.hpp  configuration_flowcontrol.hpp  configuration_manager.cpp  configuration_manager.h  configuration_namespace.hpp  dup_depot.cpp  dup_depot.hpp  dup_sync_manager.cpp  dup_sync_manager.hpp  duplicate_base.hpp  duplicate_manager.cpp  duplicate_manager.hpp  flow_controller_impl.cpp  flow_controller_impl.h  heartbeat_thread.cpp  heartbeat_thread.hpp  i_remote_sync_manager.hpp  item_manager.cpp  item_manager.hpp  migrate_manager.cpp  migrate_manager.hpp  new_remote_sync_manager.cpp  new_remote_sync_manager.hpp  prefix_locker.hpp  recovery_manager.cpp  recovery_manager.hpp  remote_sync_manager.cpp  remote_sync_manager.hpp  repair_rsync.cpp  request_processor.cpp  request_processor.hpp  stat_manager.h  stat_manager_mock.cpp  stat_processor.cpp  stat_processor.h  sync_packet_list.cpp  (+11 more)
src/invalserver/: Makefile.am  inval_async_task_thread.cpp  inval_async_task_thread.hpp  inval_loader.cpp  inval_loader.hpp  inval_loader_test.cpp  inval_loader_test.hpp  inval_loader_test_main.cpp  inval_processor.cpp  inval_processor.hpp  inval_request_storage.cpp  inval_request_storage.hpp  inval_retry_thread.cpp  inval_retry_thread.hpp  inval_server.cpp  inval_server.hpp  inval_stat_helper.cpp  inval_stat_helper.hpp  server_pair_id.hpp
src/packets/: Makefile.am  admin_config_packet.hpp  base_packet.hpp  conf_heartbeat_packet.hpp  data_server_ctrl_packet.hpp  dump_bucket_packet.hpp  dump_packet.hpp  duplicate_packet.hpp  expire_packet.hpp  feedback_packet.hpp  flow_control_packet.hpp  flow_view.hpp  get_group_non_down_dataserver_packet.hpp  get_group_packet.hpp  get_hidden_packet.hpp  get_migrate_machine.hpp  get_packet.hpp  get_range_packet.hpp  get_server_table_packet.hpp  group_names_packet.hpp  heartbeat_packet.hpp  hide_by_proxy_packet.hpp  hide_packet.hpp  inc_dec_bounded_packet.hpp  inc_dec_packet.hpp  inval_stat_packet.hpp  invalid_packet.hpp  items_packet.hpp  lock_packet.hpp  mc_ops_packet.hpp  migrate_finish_packet.hpp  mupdate_packet.hpp  op_cmd_packet.hpp  packet.hpp  packet_factory.cpp  packet_factory.hpp  packet_streamer.cpp  packet_streamer.hpp  packetqueue.cpp  packetqueue.hpp  (+26 more)
src/plugin/: Makefile.am  base_plugin.hpp  plugin_manager.cpp  plugin_manager.hpp  remote_sync_manager.cpp  remote_sync_manager.hpp  sample_plugin.cpp  sample_plugin.hpp  sync_packet_list.cpp  sync_packet_list.hpp
src/storage/: Makefile.am  dump_filter.cpp  dump_filter.hpp  dump_manager.cpp  dump_manager.hpp  storage_manager.hpp
src/tools/: Makefile.am  dump_transfer.cpp
test/: Makefile.am
test/failover_test/: .classpath  .project  clean.bat  eclipse.bat  failover.conf  pack.bat  pom.xml  tair_b.conf  tair_fail.conf  tair_group_change.conf  tair_group_fail.conf
test/interface_test/: CTAIRCLIENTAPI_03_x_put_Test.cpp  CTAIRCLIENTAPI_03_x_put_oterfunction_Test.cpp  CTAIRCLIENTAPI_04_x_get_Test.cpp  CTAIRCLIENTAPI_05_x_remove_Test.cpp  CTAIRCLIENTAPI_07_x_addItems_Test.cpp  CTAIRCLIENTAPI_07_x_addItems_otherfunction_Test.cpp  CTAIRCLIENTAPI_08_x_getItems_Test.cpp  CTAIRCLIENTAPI_09_x_getAndRemove_Test.cpp  CTAIRCLIENTAPI_10_x_removeItems_Test.cpp  CTAIRCLIENTAPI_11_x_getItemsCount_Test.cpp  CTAIRCLIENTAPI_13_x_incr_Test.cpp  CTAIRCLIENTAPI_13_x_incr_otherfunction_Test.cpp  CTAIRCLIENTAPI_14_x_decr_Test.cpp  CTAIRCLIENTAPI_14_x_decr_otherfunction_Test.cpp  CTAIRCLIENTAPI_15_x_set_count_Test.cpp  CTAIRCLIENTAPI_16_x_lock_Test.cpp  CTAIRCLIENTAPI_17_x_mget_Test.cpp  CTAIRCLIENTAPI_18_x_range_Test.cpp  Makefile.am  inte_test.conf  interface_test_base.cpp  interface_test_base.h  kdb_test.conf  (+7 more)
(+368 files in other folders)
