cmake_minimum_required(VERSION 3.9)
project(tair_github)

set(CMAKE_CXX_STANDARD 11)

add_executable(tair_github
        deps/tbsys/src/atomic.h
        deps/tbsys/src/bytebuffer.cpp
        deps/tbsys/src/bytebuffer.h
        deps/tbsys/src/Cond.cpp
        deps/tbsys/src/Cond.h
        deps/tbsys/src/config.cpp
        deps/tbsys/src/config.h
        deps/tbsys/src/CtrlCHandler.cpp
        deps/tbsys/src/CtrlCHandler.h
        deps/tbsys/src/defaultrunnable.cpp
        deps/tbsys/src/defaultrunnable.h
        deps/tbsys/src/EventHandler.h
        deps/tbsys/src/Exception.cpp
        deps/tbsys/src/Exception.h
        deps/tbsys/src/filequeue.cpp
        deps/tbsys/src/filequeue.h
        deps/tbsys/src/filequeuethread.cpp
        deps/tbsys/src/filequeuethread.h
        deps/tbsys/src/fileutil.cpp
        deps/tbsys/src/fileutil.h
        deps/tbsys/src/Functional.h
        deps/tbsys/src/Handle.h
        deps/tbsys/src/iqueuehandler.h
        deps/tbsys/src/linklist.h
        deps/tbsys/src/Lock.h
        deps/tbsys/src/Memory.hpp
        deps/tbsys/src/Monitor.h
        deps/tbsys/src/Mutex.cpp
        deps/tbsys/src/Mutex.h
        deps/tbsys/src/Network.cpp
        deps/tbsys/src/Network.h
        deps/tbsys/src/process.cpp
        deps/tbsys/src/process.h
        deps/tbsys/src/profiler.cpp
        deps/tbsys/src/profiler.h
        deps/tbsys/src/PublicDefine.h
        deps/tbsys/src/queuethread.cpp
        deps/tbsys/src/queuethread.h
        deps/tbsys/src/RecMutex.cpp
        deps/tbsys/src/RecMutex.h
        deps/tbsys/src/runnable.h
        deps/tbsys/src/Service.cpp
        deps/tbsys/src/Service.h
        deps/tbsys/src/Shared.cpp
        deps/tbsys/src/Shared.h
        deps/tbsys/src/StaticMutex.cpp
        deps/tbsys/src/StaticMutex.h
        deps/tbsys/src/stringutil.cpp
        deps/tbsys/src/stringutil.h
        deps/tbsys/src/tblockguard.h
        deps/tbsys/src/tblog.cpp
        deps/tbsys/src/tblog.h
        deps/tbsys/src/tbnetutil.cpp
        deps/tbsys/src/tbnetutil.h
        deps/tbsys/src/tbrwlock.cpp
        deps/tbsys/src/tbrwlock.h
        deps/tbsys/src/tbsys.h
        deps/tbsys/src/TbThread.cpp
        deps/tbsys/src/TbThread.h
        deps/tbsys/src/tbtimeutil.cpp
        deps/tbsys/src/tbtimeutil.h
        deps/tbsys/src/thread.h
        deps/tbsys/src/threadcond.h
        deps/tbsys/src/ThreadException.cpp
        deps/tbsys/src/ThreadException.h
        deps/tbsys/src/threadmutex.h
        deps/tbsys/src/ThreadPool.cpp
        deps/tbsys/src/ThreadPool.h
        deps/tbsys/src/Time.cpp
        deps/tbsys/src/Time.h
        deps/tbsys/src/Timer.cpp
        deps/tbsys/src/Timer.h
        deps/tbsys/src/Utility.cpp
        deps/tbsys/src/Utility.h
        deps/tbsys/src/WarningBuffer.cpp
        deps/tbsys/src/WarningBuffer.h
        deps/tbsys/test/Makefile.am
        deps/tbsys/test/testBase.cpp
        deps/tbsys/test/testBase.h
        deps/tbsys/test/testCommon.h
        deps/tbsys/test/testconfig.conf
        deps/tbsys/test/testconfig.cpp
        deps/tbsys/test/testfilequeue.cpp
        deps/tbsys/test/testfileutil.cpp
        deps/tbsys/test/testlog.cpp
        deps/tbsys/test/testnetutil.cpp
        deps/tbsys/test/testqueuethread.cpp
        deps/tbsys/test/testService.cpp
        deps/tbsys/test/teststringutil.cpp
        deps/tbsys/test/testthread.cpp
        deps/tbsys/test/testThreadPool.cpp
        deps/tbsys/test/testTimer.cpp
        deps/tbsys/test/testtimeutil.cpp
        deps/tbsys/test/testwarningbuffer.cpp
        src/client/clean_worker.hpp
        src/client/cluster_controller.cpp
        src/client/cluster_controller.hpp
        src/client/cluster_handler_manager.cpp
        src/client/cluster_handler_manager.hpp
        src/client/cluster_info_updater.cpp
        src/client/cluster_info_updater.hpp
        src/client/config_loader.hpp
        src/client/data_entry_local_cache.cpp
        src/client/data_entry_local_cache.h
        src/client/del_job.hpp
        src/client/diamond_manager.cpp
        src/client/diamond_manager.hpp
        src/client/flow_admin.cpp
        src/client/flow_admin.h
        src/client/i_tair_client_impl.cpp
        src/client/i_tair_client_impl.hpp
        src/client/local_cache.h
        src/client/local_cache.hpp
        src/client/manipulate_ds_to_cs.cpp
        src/client/nonblock_queue.hpp
        src/client/string_local_cache.cpp
        src/client/string_local_cache.h
        src/client/tair_client.cpp
        src/client/tair_client.hpp
        src/client/tair_client_api.cpp
        src/client/tair_client_api.hpp
        src/client/tair_client_api_impl.cpp
        src/client/tair_client_api_impl.hpp
        src/client/tair_key_clean.cpp
        src/client/tair_mc_client_api.cpp
        src/client/tair_mc_client_api.hpp
        src/client/tair_multi_cluster_client_impl.cpp
        src/client/tair_multi_cluster_client_impl.hpp
        src/client/tair_statistics.cpp
        src/client/tair_statistics.h
        src/common/snappy/snappy-c.cc
        src/common/snappy/snappy-c.h
        src/common/snappy/snappy-internal.h
        src/common/snappy/snappy-sinksource.cc
        src/common/snappy/snappy-sinksource.h
        src/common/snappy/snappy-stubs-internal.cc
        src/common/snappy/snappy-stubs-internal.h
        src/common/snappy/snappy.cc
        src/common/snappy/snappy.h
        src/common/async_callback_def.hpp
        src/common/atomic.h
        src/common/blockqueue.hpp
        src/common/BlockQueueEx.hpp
        src/common/bucket_queue.cpp
        src/common/bucket_queue.hpp
        src/common/cJSON.c
        src/common/cJSON.h
        src/common/compressor.hpp
        src/common/concurrent_queue.hpp
        src/common/counter_wrapper.hpp
        src/common/data_dumpper.cpp
        src/common/data_dumpper.hpp
        src/common/data_entry.cpp
        src/common/data_entry.hpp
        src/common/databuffer.hpp
        src/common/define.hpp
        src/common/dump_data_info.hpp
        src/common/easy_helper.cpp
        src/common/easy_helper.hpp
        src/common/file_list_factory.hpp
        src/common/file_op.cpp
        src/common/file_op.hpp
        src/common/flow_controller.h
        src/common/flowrate.h
        src/common/hash.hpp
        src/common/httpclient.cpp
        src/common/httpclient.hpp
        src/common/inval_stat.hpp
        src/common/item_data_info.cpp
        src/common/item_data_info.hpp
        src/common/key_value_pack.hpp
        src/common/log.hpp
        src/common/log_reader.hpp
        src/common/mixin_test_helper.cpp
        src/common/mixin_test_helper.hpp
        src/common/mmap_file.hpp
        src/common/mutex_lock.h
        src/common/record.cpp
        src/common/record.hpp
        src/common/record_logger.cpp
        src/common/record_logger.hpp
        src/common/record_logger_util.cpp
        src/common/record_logger_util.hpp
        src/common/result.hpp
        src/common/rwlock.hpp
        src/common/scoped_wrlock.hpp
        src/common/seqlock.hpp
        src/common/snappy_compressor.hpp
        src/common/stat_define.cpp
        src/common/stat_define.hpp
        src/common/stat_helper.cpp
        src/common/stat_helper.hpp
        src/common/stat_info.hpp
        src/common/syncproc.hpp
        src/common/tair_atomic.hpp
        src/common/tair_stat.cpp
        src/common/tair_stat.hpp
        src/common/thread_guard.hpp
        src/common/timed_collections.cpp
        src/common/timed_collections.hpp
        src/common/util.cpp
        src/common/util.hpp
        src/common/wait_object.hpp
        src/configserver/conf_server_table_checker.cpp
        src/configserver/conf_server_table_manager.cpp
        src/configserver/conf_server_table_manager.hpp
        src/configserver/conf_server_table_monitor.cpp
        src/configserver/conf_server_table_transfer.cpp
        src/configserver/const_parameter_pinter.cpp
        src/configserver/group_info.cpp
        src/configserver/group_info.hpp
        src/configserver/migrate_emulator.cpp
        src/configserver/server_conf_thread.cpp
        src/configserver/server_conf_thread.hpp
        src/configserver/server_info.cpp
        src/configserver/server_info.hpp
        src/configserver/server_info_allocator.cpp
        src/configserver/server_info_allocator.hpp
        src/configserver/server_info_file_mapper.cpp
        src/configserver/server_info_file_mapper.hpp
        src/configserver/server_info_file_monitor.cpp
        src/configserver/stat_info.cpp
        src/configserver/stat_info.hpp
        src/configserver/stat_info_test.cpp
        src/configserver/table_builder.cpp
        src/configserver/table_builder.hpp
        src/configserver/table_builder1.cpp
        src/configserver/table_builder1.hpp
        src/configserver/table_builder2.cpp
        src/configserver/table_builder2.hpp
        src/configserver/tair_cfg_svr.cpp
        src/configserver/tair_cfg_svr.hpp
        src/dataserver/modules/hotkey.cpp
        src/dataserver/modules/hotkey.hpp
        src/dataserver/modules/op_killer.hpp
        src/dataserver/modules/rt_collector.cpp
        src/dataserver/modules/rt_collector.hpp
        src/dataserver/modules/rt_object.cpp
        src/dataserver/modules/rt_object.hpp
        src/dataserver/base_migrate.hpp
        src/dataserver/base_tair_manager.hpp
        src/dataserver/cluster_handler.cpp
        src/dataserver/cluster_handler.hpp
        src/dataserver/configuration_flowcontrol.hpp
        src/dataserver/configuration_manager.cpp
        src/dataserver/configuration_manager.h
        src/dataserver/configuration_namespace.hpp
        src/dataserver/dup_depot.cpp
        src/dataserver/dup_depot.hpp
        src/dataserver/dup_sync_manager.cpp
        src/dataserver/dup_sync_manager.hpp
        src/dataserver/duplicate_base.hpp
        src/dataserver/duplicate_manager.cpp
        src/dataserver/duplicate_manager.hpp
        src/dataserver/flow_controller_impl.cpp
        src/dataserver/flow_controller_impl.h
        src/dataserver/heartbeat_thread.cpp
        src/dataserver/heartbeat_thread.hpp
        src/dataserver/i_remote_sync_manager.hpp
        src/dataserver/migrate_manager.cpp
        src/dataserver/migrate_manager.hpp
        src/dataserver/new_remote_sync_manager.cpp
        src/dataserver/new_remote_sync_manager.hpp
        src/dataserver/prefix_locker.hpp
        src/dataserver/recovery_manager.cpp
        src/dataserver/recovery_manager.hpp
        src/dataserver/remote_sync_manager.cpp
        src/dataserver/remote_sync_manager.hpp
        src/dataserver/repair_rsync.cpp
        src/dataserver/request_processor.cpp
        src/dataserver/request_processor.hpp
        src/dataserver/stat_manager.h
        src/dataserver/stat_manager_mock.cpp
        src/dataserver/stat_processor.cpp
        src/dataserver/stat_processor.h
        src/dataserver/synctest.cpp
        src/dataserver/table_manager.cpp
        src/dataserver/table_manager.hpp
        src/dataserver/tair_manager.cpp
        src/dataserver/tair_manager.hpp
        src/dataserver/tair_server.cpp
        src/dataserver/tair_server.hpp
        src/dataserver/update_log.cpp
        src/dataserver/update_log.hpp
        src/packets/admin_config_packet.hpp
        src/packets/base_packet.hpp
        src/packets/conf_heartbeat_packet.hpp
        src/packets/data_server_ctrl_packet.hpp
        src/packets/dump_bucket_packet.hpp
        src/packets/dump_packet.hpp
        src/packets/duplicate_packet.hpp
        src/packets/expire_packet.hpp
        src/packets/feedback_packet.hpp
        src/packets/flow_control_packet.hpp
        src/packets/flow_view.hpp
        src/packets/get_group_non_down_dataserver_packet.hpp
        src/packets/get_group_packet.hpp
        src/packets/get_hidden_packet.hpp
        src/packets/get_migrate_machine.hpp
        src/packets/get_packet.hpp
        src/packets/get_range_packet.hpp
        src/packets/get_server_table_packet.hpp
        src/packets/group_names_packet.hpp
        src/packets/heartbeat_packet.hpp
        src/packets/hide_by_proxy_packet.hpp
        src/packets/hide_packet.hpp
        src/packets/inc_dec_bounded_packet.hpp
        src/packets/inc_dec_packet.hpp
        src/packets/inval_stat_packet.hpp
        src/packets/invalid_packet.hpp
        src/packets/lock_packet.hpp
        src/packets/mc_ops_packet.hpp
        src/packets/migrate_finish_packet.hpp
        src/packets/mupdate_packet.hpp
        src/packets/op_cmd_packet.hpp
        src/packets/packet.hpp
        src/packets/packet_factory.cpp
        src/packets/packet_factory.hpp
        src/packets/packetqueue.cpp
        src/packets/packetqueue.hpp
        src/packets/ping_packet.hpp
        src/packets/prefix_get_hiddens_packet.hpp
        src/packets/prefix_gets_packet.hpp
        src/packets/prefix_hides_by_proxy_packet.hpp
        src/packets/prefix_hides_packet.hpp
        src/packets/prefix_incdec_bounded_packet.hpp
        src/packets/prefix_incdec_packet.hpp
        src/packets/prefix_invalids_packet.hpp
        src/packets/prefix_puts_packet.hpp
        src/packets/prefix_removes_packet.hpp
        src/packets/put_packet.hpp
        src/packets/query_info_packet.hpp
        src/packets/recovery_finish_packet.hpp
        src/packets/remove_area_packet.hpp
        src/packets/remove_packet.hpp
        src/packets/response_mreturn_packet.hpp
        src/packets/response_return_packet.hpp
        src/packets/retry_all_packet.hpp
        src/packets/rt_packet.hpp
        src/packets/server_hash_table_packet.hpp
        src/packets/set_master_packet.hpp
        src/packets/simple_prefix_get_packet.hpp
        src/packets/stat_cmd_packet.hpp
        src/packets/statistics_packet.hpp
        src/packets/sync_packet.hpp
        src/packets/uniq_remove_packet.hpp
        src/plugin/base_plugin.hpp
        src/plugin/plugin_manager.cpp
        src/plugin/plugin_manager.hpp
        src/plugin/remote_sync_manager.cpp
        src/plugin/remote_sync_manager.hpp
        src/plugin/sample_plugin.cpp
        src/plugin/sample_plugin.hpp
        src/plugin/sync_packet_list.cpp
        src/plugin/sync_packet_list.hpp
        src/storage/ldb/leveldb/db/builder.cc
        src/storage/ldb/leveldb/db/builder.h
        src/storage/ldb/leveldb/db/c.cc
        src/storage/ldb/leveldb/db/db_impl.cc
        src/storage/ldb/leveldb/db/db_impl.h
        src/storage/ldb/leveldb/db/db_iter.cc
        src/storage/ldb/leveldb/db/db_iter.h
        src/storage/ldb/leveldb/db/dbformat.cc
        src/storage/ldb/leveldb/db/dbformat.h
        src/storage/ldb/leveldb/db/filename.cc
        src/storage/ldb/leveldb/db/filename.h
        src/storage/ldb/leveldb/db/log_format.h
        src/storage/ldb/leveldb/db/log_reader.cc
        src/storage/ldb/leveldb/db/log_reader.h
        src/storage/ldb/leveldb/db/log_writer.cc
        src/storage/ldb/leveldb/db/log_writer.h
        src/storage/ldb/leveldb/db/memtable.cc
        src/storage/ldb/leveldb/db/memtable.h
        src/storage/ldb/leveldb/db/repair.cc
        src/storage/ldb/leveldb/db/skiplist.h
        src/storage/ldb/leveldb/db/snapshot.h
        src/storage/ldb/leveldb/db/table_cache.cc
        src/storage/ldb/leveldb/db/table_cache.h
        src/storage/ldb/leveldb/db/version_edit.cc
        src/storage/ldb/leveldb/db/version_edit.h
        src/storage/ldb/leveldb/db/version_set.cc
        src/storage/ldb/leveldb/db/version_set.h
        src/storage/ldb/leveldb/db/write_batch.cc
        src/storage/ldb/leveldb/db/write_batch_internal.h
        src/storage/ldb/leveldb/include/leveldb/c.h
        src/storage/ldb/leveldb/include/leveldb/cache.h
        src/storage/ldb/leveldb/include/leveldb/comparator.h
        src/storage/ldb/leveldb/include/leveldb/db.h
        src/storage/ldb/leveldb/include/leveldb/env.h
        src/storage/ldb/leveldb/include/leveldb/filter_policy.h
        src/storage/ldb/leveldb/include/leveldb/iterator.h
        src/storage/ldb/leveldb/include/leveldb/options.h
        src/storage/ldb/leveldb/include/leveldb/slice.h
        src/storage/ldb/leveldb/include/leveldb/status.h
        src/storage/ldb/leveldb/include/leveldb/table.h
        src/storage/ldb/leveldb/include/leveldb/table_builder.h
        src/storage/ldb/leveldb/include/leveldb/write_batch.h
        src/storage/ldb/leveldb/port/win/stdint.h
        src/storage/ldb/leveldb/port/atomic_count.h
        src/storage/ldb/leveldb/port/atomic_pointer.h
        src/storage/ldb/leveldb/port/port.h
        src/storage/ldb/leveldb/port/port_android.cc
        src/storage/ldb/leveldb/port/port_android.h
        src/storage/ldb/leveldb/port/port_example.h
        src/storage/ldb/leveldb/port/port_posix.cc
        src/storage/ldb/leveldb/port/port_posix.h
        src/storage/ldb/leveldb/port/sha1_portable.cc
        src/storage/ldb/leveldb/port/sha1_portable.h
        src/storage/ldb/leveldb/table/block.cc
        src/storage/ldb/leveldb/table/block.h
        src/storage/ldb/leveldb/table/block_builder.cc
        src/storage/ldb/leveldb/table/block_builder.h
        src/storage/ldb/leveldb/table/filter_block.cc
        src/storage/ldb/leveldb/table/filter_block.h
        src/storage/ldb/leveldb/table/format.cc
        src/storage/ldb/leveldb/table/format.h
        src/storage/ldb/leveldb/table/iterator.cc
        src/storage/ldb/leveldb/table/iterator_wrapper.h
        src/storage/ldb/leveldb/table/merger.cc
        src/storage/ldb/leveldb/table/merger.h
        src/storage/ldb/leveldb/table/table.cc
        src/storage/ldb/leveldb/table/table_builder.cc
        src/storage/ldb/leveldb/table/two_level_iterator.cc
        src/storage/ldb/leveldb/table/two_level_iterator.h
        src/storage/ldb/leveldb/util/arena.cc
        src/storage/ldb/leveldb/util/arena.h
        src/storage/ldb/leveldb/util/bloom.cc
        src/storage/ldb/leveldb/util/cache.cc
        src/storage/ldb/leveldb/util/coding.cc
        src/storage/ldb/leveldb/util/coding.h
        src/storage/ldb/leveldb/util/comparator.cc
        src/storage/ldb/leveldb/util/config.cc
        src/storage/ldb/leveldb/util/config.h
        src/storage/ldb/leveldb/util/crc32c.cc
        src/storage/ldb/leveldb/util/crc32c.h
        src/storage/ldb/leveldb/util/env.cc
        src/storage/ldb/leveldb/util/env_posix.cc
        src/storage/ldb/leveldb/util/filter_policy.cc
        src/storage/ldb/leveldb/util/hash.cc
        src/storage/ldb/leveldb/util/hash.h
        src/storage/ldb/leveldb/util/histogram.cc
        src/storage/ldb/leveldb/util/histogram.h
        src/storage/ldb/leveldb/util/logging.cc
        src/storage/ldb/leveldb/util/logging.h
        src/storage/ldb/leveldb/util/mutexlock.h
        src/storage/ldb/leveldb/util/options.cc
        src/storage/ldb/leveldb/util/posix_logger.h
        src/storage/ldb/leveldb/util/random.h
        src/storage/ldb/leveldb/util/status.cc
        src/storage/ldb/tools/ldb_bucket_check.cpp
        src/storage/ldb/tools/ldb_bucket_distribution.cpp
        src/storage/ldb/tools/ldb_dump.cpp
        src/storage/ldb/tools/ldb_gclog_reader.cpp
        src/storage/ldb/tools/ldb_manifest_merger.cpp
        src/storage/ldb/tools/ldb_manifest_rebuild.cpp
        src/storage/ldb/tools/ldb_rsync.cpp
        src/storage/ldb/tools/ldb_sst_check.cpp
        src/storage/ldb/tools/ldb_sst_filter.cpp
        src/storage/ldb/tools/ldb_sst_picker.cpp
        src/storage/ldb/tools/ldb_util.cpp
        src/storage/ldb/tools/ldb_util.hpp
        src/storage/ldb/tools/ldb_verify.cpp
        src/storage/ldb/tools/leveldb_main.cc
        src/storage/ldb/tools/statistics_verify.cpp
        src/storage/ldb/tools/view_cache_stat.cpp
        src/storage/ldb/bg_task.cpp
        src/storage/ldb/bg_task.hpp
        src/storage/ldb/data_file_reader.cpp
        src/storage/ldb/data_file_reader.hpp
        src/storage/ldb/file_op.cpp
        src/storage/ldb/file_op.hpp
        src/storage/ldb/ldb_balancer.cpp
        src/storage/ldb/ldb_balancer.hpp
        src/storage/ldb/ldb_bloom.cpp
        src/storage/ldb/ldb_cache_stat.cpp
        src/storage/ldb/ldb_cache_stat.hpp
        src/storage/ldb/ldb_comparator.cpp
        src/storage/ldb/ldb_comparator.hpp
        src/storage/ldb/ldb_define.cpp
        src/storage/ldb/ldb_define.hpp
        src/storage/ldb/ldb_gc_factory.cpp
        src/storage/ldb/ldb_gc_factory.hpp
        src/storage/ldb/ldb_instance.cpp
        src/storage/ldb/ldb_instance.hpp
        src/storage/ldb/ldb_manager.cpp
        src/storage/ldb/ldb_manager.hpp
        src/storage/ldb/ldb_numeric_comparator.cpp
        src/storage/ldb/ldb_remote_sync_logger.cpp
        src/storage/ldb/ldb_remote_sync_logger.hpp
        src/storage/ldb/ldb_stat_manager.cpp
        src/storage/ldb/ldb_stat_manager.hpp
        src/storage/ldb/local_binlog_queue.cpp
        src/storage/ldb/local_binlog_queue.hpp
        src/storage/ldb/rt_profiler.cpp
        src/storage/ldb/rt_profiler.hpp
        src/storage/ldb/stat_manager.cpp
        src/storage/ldb/stat_manager.hpp
        src/storage/ldb/view_cache_stat.cpp
        src/storage/mdb/cache_hashmap.cpp
        src/storage/mdb/cache_hashmap.hpp
        src/storage/mdb/libmdb_c.cpp
        src/storage/mdb/libmdb_c.hpp
        src/storage/mdb/libmdb_test_c.cpp
        src/storage/mdb/lock_guard.hpp
        src/storage/mdb/mdb_define.cpp
        src/storage/mdb/mdb_define.hpp
        src/storage/mdb/mdb_factory.cpp
        src/storage/mdb/mdb_factory.hpp
        src/storage/mdb/mdb_instance.cpp
        src/storage/mdb/mdb_instance.hpp
        src/storage/mdb/mdb_manager.cpp
        src/storage/mdb/mdb_manager.hpp
        src/storage/mdb/mdb_reader.cpp
        src/storage/mdb/mdb_stat.hpp
        src/storage/mdb/mdb_stat_manager.cpp
        src/storage/mdb/mdb_stat_manager.hpp
        src/storage/mdb/mem_cache.cpp
        src/storage/mdb/mem_cache.hpp
        src/storage/mdb/mem_pool.cpp
        src/storage/mdb/mem_pool.hpp
        src/storage/dump_filter.cpp
        src/storage/dump_filter.hpp
        src/storage/dump_manager.cpp
        src/storage/dump_manager.hpp
        src/storage/storage_manager.hpp
        src/tools/dump_transfer.cpp)
